--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,36 +1,36 @@
 /* Auto-generated by wallust — DO NOT EDIT */
 
-@define-color background               #010000;
-@define-color surface                  #010000;
-@define-color surface_container        #010000;
-@define-color surface_container_high   #AAA798;
-@define-color surface_container_highest #AAA798;
-@define-color surface_container_low    #010000;
-@define-color surface_bright           #F4EFDA;
+@define-color background               #252827;
+@define-color surface                  #505353;
+@define-color surface_container        #505353;
+@define-color surface_container_high   #849194;
+@define-color surface_container_highest #849194;
+@define-color surface_container_low    #505353;
+@define-color surface_bright           #BDCFD4;
 
-@define-color on_surface               #FDF9EB;
-@define-color on_surface_variant       #F4EFDA;
-@define-color inverse_surface          #FDF9EB;
+@define-color on_surface               #D7E3E7;
+@define-color on_surface_variant       #BDCFD4;
+@define-color inverse_surface          #D7E3E7;
 
-@define-color primary                  #575655;
-@define-color primary_fixed            #575655;
-@define-color primary_fixed_dim        #605F5E;
-@define-color on_primary               #010000;
+@define-color primary                  #4D5655;
+@define-color primary_fixed            #4D5655;
+@define-color primary_fixed_dim        #54605E;
+@define-color on_primary               #252827;
 
-@define-color secondary                #807A73;
-@define-color on_secondary             #010000;
-@define-color secondary_container      #AAA798;
-@define-color on_secondary_container   #FDF9EB;
-@define-color on_secondary_fixed_variant #F4EFDA;
+@define-color secondary                #BB8257;
+@define-color on_secondary             #252827;
+@define-color secondary_container      #849194;
+@define-color on_secondary_container   #D7E3E7;
+@define-color on_secondary_fixed_variant #BDCFD4;
 
-@define-color tertiary                 #BBB394;
-@define-color on_tertiary              #010000;
+@define-color tertiary                 #7E959C;
+@define-color on_tertiary              #252827;
 
-@define-color error                    #605F5E;
-@define-color on_error                 #FDF9EB;
+@define-color error                    #54605E;
+@define-color on_error                 #D7E3E7;
 
-@define-color outline                  #AAA798;
-@define-color outline_variant          #AAA798;
+@define-color outline                  #849194;
+@define-color outline_variant          #849194;
 
 * {
     border: none;
@@ -44,7 +44,7 @@
 }
 
 window#waybar {
-    background: alpha(#010000, 0.85);
+    background: alpha(#252827, 0.85);
     color: @on_surface;
     border-bottom: 1px solid alpha(@outline, 0.3);
 }
