--- a/wlogout/style.css
+++ b/wlogout/style.css
@@ -7,15 +7,15 @@
 }
 
 window {
-    background-color: rgba(1,0,0, 0.4);
+    background-color: rgba(37,40,39, 0.4);
 }
 
 button {
-    color: #FDF9EB;
-    background-color: rgba(1,0,0, 0.6);
+    color: #D7E3E7;
+    background-color: rgba(80,83,83, 0.6);
     border-style: solid;
     border-width: 2px;
-    border-color: #AAA798;
+    border-color: #849194;
     border-radius: 0;
     background-repeat: no-repeat;
     background-position: center;
@@ -26,8 +26,8 @@ button {
 button:focus,
 button:active,
 button:hover {
-    background-color: #575655;
-    border-color: #FDF9EB;
-    color: #010000;
+    background-color: #4D5655;
+    border-color: #D7E3E7;
+    color: #252827;
     outline-style: none;
 }
